<resources>
    <string name="app_name">E02Views</string>
    <string name="action_signUp">회원가입</string>
    <string name="action_memo">메모장</string>
    <string name="loginId">아이디</string>
    <string name="input_loginId">아이디 입력</string>
    <string name="password">비밀번호</string>
    <string name="input_password">비밀번호 입력</string>
    <string name="password2">비밀번호 확인</string>
    <string name="input_password2">비밀번호 재입력</string>
    <string name="email">이메일</string>
    <string name="input_email">이메일 입력</string>
    <string name="signUp">회원가입</string>
    <string name="input_title">제목을 입력하세요</string>
    <string name="input_content">내용을 입력하세요</string>
    <string name="save">저장</string>
</resources>